# testbuild

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  amvera.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: IS_DEPLOY.txt  entrypoint.sh
deploy/gunicorn/: gunicorn.sh  gunicorn_config.py
deploy/nginx/: Dockerfile  README.md  default.conf.template  nginx.conf
src/: appmap.yml
src/app/: urls.py
src/app/main/: admin.py  apps.py  fields.py  forms.py  models.py  scripts.py  signals.py  sitemap.py  translation.py
src/app/main/static/css/: _dialog_fancybox.css  circle100.css  colors.css  dialog-similar-inspirer.css  emoji.css  item.staff.css  main.css  movies_panel.css  rateheart.css  video.css
src/app/main/static/js/: dark.js  darktest.js  dialog-similar-inspirer.js  jquery.bt.min.js  main.js  rateheart-emoji.js  scroll-container.js  search.js  vote-click.js
src/app/main/static/material-web-main/: bundle.js
src/app/main/templates/main/: Home.html
src/app/main/urls/: __init__.py  urls.py
src/app/main/views/: __init__.py  views.py
src/app/pwa/: app_settings.py  apps.py  views.py
src/app/pwa/static/lib/pwa/js/: dj-pwa-support.js
src/app/pwa/templates/pwa/: dynamic-meta.html  offline.html  pwa.html  serviceworker.js
src/config/: .env  rabbitmq.py  urls.py
src/config/settings/: __init__.py
src/config/settings/components/: __init__.py  base.py  cache.py  database.py  email.py  tracking.py
src/config/settings/environments/: development.py  production.py
src/res/lib/fancybox/: jquery.fancybox.min.css  jquery.fancybox.min.js
src/res/lib/flaticon/: flaticon.css
src/res/lib/notification/: notification.css  notificationShow.js
src/res/lib/owl-carousel/: owl-carousel-photos.js
src/res/lib/radial-menu/: socialCircle.js
src/res/locale/ru/LC_MESSAGES/: django.po
src/res/templates/: base.html
src/res/templates/admin/main/typerelease/: mptt_change_list.html
src/res/templates/inc/: _footer.html  _header.html
src/res/templates/txt/: humans.txt  robots.txt
src/res/templates/uicommon/: swith.html
src/test/: tests.py
src/util/: file_utils.py  utlis.py
